syntax = "proto2";

package org.gmagnotta.model.event;

message OrderChangeEvent {

	enum EventType {
		ORDER_CREATED = 1;
		ORDER_UPDATED = 2;
		ORDER_DELETED = 3;
	}

	required EventType type = 1;

	required Order order = 2;
}

message Order {
   
   required int32 id = 1;
   
   required fixed64 creationDate = 2;
   
   required BigDecimal amount = 3;
   
   repeated LineItem lineItems = 4;
   
   optional string externalOrderId = 5;
}


message BigDecimal {
   
   optional bytes unscaledValue = 1;
   
   optional int32 scale = 2 [default = 0];
}


message Item {
   
   required int32 id = 1;
   
   required string description = 2;
   
   required BigDecimal price = 3;
}


message LineItem {
   
   required int32 id = 1;
   
   required BigDecimal price = 2;
   
   required int32 quantity = 3;
   
   required Item item = 4;
   
   required int32 orderid = 5;
}


message BigInteger {
   
   optional bytes bytes = 1;
}

